client/src/style/TaskItem.scss
@import "colors";
@import "mixins";

.TaskItem {
  display: flex;
  align-items: center;
	margin: 5px 0;
	padding: 0 10px 5px 10px;
	text-align: left;
	color: $darker-purple;
	border-bottom: 1px solid $darker-purple;

	.content {
		flex: 1 auto;
    @include ellipsis;
	}

	.title, .desc {
		display: block;
    @include ellipsis;
	}

	.title {
		font-weight: bold;
	}

  .icon-btn {
    width: 20px;
    height: 20px;
    margin: 0 10px;
    cursor: pointer;
    vertical-align: bottom;

    &.remove-btn {
      background: url('./bin.svg') 0 0 no-repeat;
    }

    &.change-btn {
      background: url('./pencil.svg') 0 0 no-repeat;
    }
  }
}

